# pico-WSPRer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core1.c  defines.h  init.c  main.c  utilities.c  utilities.h
PCB/: BOM_Board1_PCB1_2024-06-30.xlsx  BOM_Board1_PCB1_2024-09-28.xlsx  BOM_Board1_PCB1_2024-10-23.xlsx  BOM_Board1_PCB1_2025-02-05.xlsx  BOM_Board1_PCB1_2025-07-17.xlsx  PickAndPlace_PCB1_2024-06-30.xlsx  PickAndPlace_PCB1_2024-09-28.xlsx  PickAndPlace_PCB1_2024-10-23.xlsx  PickAndPlace_PCB1_2025-02-05.xlsx  PickAndPlace_PCB1_2025-07-17.xlsx  v02_M.eprj  v02_N.eprj  v4_a.eprj  v5_a.eprj  v5_d.eprj  v7_h no callsign.eprj
PCB Board/: BOM_Board1_PCB1_2024-06-25.xlsx  PickAndPlace_PCB1_2024-06-25.xlsx  custom PCB June 25 2024.eprj
TxChannel/: TxChannel.c  TxChannel.h
WSPRbeacon/: WSPRbeacon.c  WSPRbeacon.h
debug/: logutils.c  logutils.h
docs/: notes on program structure and RF generation.txt  telem encode decode notes.ods  telem encode decode notesv2.ods  v02_g.eprj
dox/: Doxyfile
dox/html/: _c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _g_p_stime_8c.html  _g_p_stime_8h.html  _g_p_stime_8h_source.html  _r_e_a_d_m_e_8md.html  _tx_channel_8c.html  _tx_channel_8h.html  _tx_channel_8h_source.html  _w_s_p_rbeacon_8c.html  _w_s_p_rbeacon_8h.html  _w_s_p_rbeacon_8h_source.html  _w_s_p_rutility_8c.html  _w_s_p_rutility_8h.html  _w_s_p_rutility_8h_source.html  annotated.html  assert_8c.html  assert_8h.html  assert_8h_source.html  bug.html  build-dev_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build-dev_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build-dev_2dco2_8pio_8h.html  build-dev_2dco2_8pio_8h_source.html  build-dev_2generated_2pico__base_2pico_2config__autogen_8h.html  build-dev_2generated_2pico__base_2pico_2config__autogen_8h_source.html  build-dev_2generated_2pico__base_2pico_2version_8h.html  build-dev_2generated_2pico__base_2pico_2version_8h_source.html  build_2_c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2dco2_8pio_8h.html  build_2dco2_8pio_8h_source.html  build_2elf2uf2_2_c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2elf2uf2_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2generated_2pico__base_2pico_2config__autogen_8h.html  build_2generated_2pico__base_2pico_2config__autogen_8h_source.html  build_2generated_2pico__base_2pico_2version_8h.html  build_2generated_2pico__base_2pico_2version_8h_source.html  (+152 more)
dox/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_2.js  defines_3.js  (+66 more)
dox/latex/: _c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _g_p_stime_8c.tex  _g_p_stime_8h.tex  _g_p_stime_8h_source.tex  _r_e_a_d_m_e_8md.tex  _tx_channel_8c.tex  _tx_channel_8h.tex  _tx_channel_8h_source.tex  _w_s_p_rbeacon_8c.tex  _w_s_p_rbeacon_8h.tex  _w_s_p_rbeacon_8h_source.tex  _w_s_p_rutility_8c.tex  _w_s_p_rutility_8h.tex  _w_s_p_rutility_8h_source.tex  annotated.tex  assert_8c.tex  assert_8h.tex  assert_8h_source.tex  bug.tex  build-dev_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build-dev_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  build-dev_2dco2_8pio_8h.tex  build-dev_2dco2_8pio_8h_source.tex  build-dev_2generated_2pico__base_2pico_2config__autogen_8h.tex  build-dev_2generated_2pico__base_2pico_2config__autogen_8h_source.tex  build-dev_2generated_2pico__base_2pico_2version_8h.tex  build-dev_2generated_2pico__base_2pico_2version_8h_source.tex  build_2_c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  build_2dco2_8pio_8h.tex  build_2dco2_8pio_8h_source.tex  build_2elf2uf2_2_c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build_2elf2uf2_2_c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  build_2generated_2pico__base_2pico_2config__autogen_8h.tex  build_2generated_2pico__base_2pico_2config__autogen_8h_source.tex  build_2generated_2pico__base_2pico_2version_8h.tex  build_2generated_2pico__base_2pico_2version_8h_source.tex  (+117 more)
hf-oscillator/: CMakeLists.txt  README.md  conswrapper.c  defines.h  hwdefs.h  protos.h  test.c
hf-oscillator/gpstime/: GPStime - Copy.c  GPStime.c  GPStime.h  timer_PIO.pio
hf-oscillator/hfconsole/: hfconsole.c  hfconsole.h
hf-oscillator/lib/: assert.c  assert.h  utility.h
hf-oscillator/piodco/: dco2.pio  dco2.pio.h  piodco.c  piodco.h
pico-fractional-pll/: LICENSE  pico_fractional_pll.c  pico_fractional_pll.h
